--- a/src/Spin/style.scss
+++ b/src/Spin/style.scss
@@ -1,4 +1,4 @@
-@main-color: #1890ff;
+$main-color: #1890ff;
 
 .spin {
   display: none;
@@ -21,7 +21,7 @@
   height: 48px;
   border-radius: 50%;
   border: 4px solid transparent;
-  border-left: 4px solid @main-color;
+  border-left: 4px solid $main-color;
   animation: spinRotate 1s infinite linear;
   box-sizing: border-box;
 }
@@ -38,7 +38,7 @@
 
 .spin-text {
   margin-top: 10px;
-  color: @main-color;
+  color: $main-color;
   font-size: 26px;/*px*/
 }
 
@@ -55,7 +55,7 @@
   user-select: none;
   overflow: hidden;
   opacity: 0.7;
-  filter: blur(0.5px);/*no*/
+  filter: blur(0.5px);
   &:after {
     content: '';
     position: absolute;
