--- a/src/Spin/style.scss
+++ b/src/Spin/style.scss
@@ -17,29 +17,29 @@ $main-color: #1890ff;
 .spin-circle {
   position: relative;
   display: inline-block;
-  width: 48px;
-  height: 48px;
+  width: 24px;
+  height: 24px;
   border-radius: 50%;
-  border: 4px solid transparent;
-  border-left: 4px solid $main-color;
+  border: 2px solid transparent;
+  border-left: 2px solid $main-color;
   animation: spinRotate 1s infinite linear;
   box-sizing: border-box;
 }
 
 .spin-large {
-  width: 64px;
-  height: 64px;
+  width: 32px;
+  height: 32px;
 }
 
 .spin-small {
-  width: 36px;
-  height: 36px;
+  width: 18px;
+  height: 18px;
 }
 
 .spin-text {
-  margin-top: 10px;
+  margin-top:5px;
   color: $main-color;
-  font-size: 26px;/*px*/
+  font-size: 13px;
 }
 
 .spin-box {
