--- a/src/Layout/style.scss
+++ b/src/Layout/style.scss
@@ -9,6 +9,10 @@
   }
 }
 
+.dashkit-layout-has-sidebar {
+  flex-direction: row;
+}
+
 .dashkit-layout-header {
   flex: 0 0 auto;
   background-color: #fff;
@@ -25,4 +29,8 @@
   background-color: #fff;
   color: rgba(0,0,0,0.65);
   font-size: 14px;
+}
+
+.dashkit-layout-sidebar {
+  width: 250px;
 }
