--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -38,14 +38,14 @@ $grays: map-merge(
 );
 
 
-$blue:    #007bff !default;
+$blue:    #2c7be5 !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
 $red:     #dc3545 !default;
 $orange:  #fd7e14 !default;
 $yellow:  #ffc107 !default;
-$green:   #28a745 !default;
+$green:   #00d97e !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
 
