--- a/src/bootstrap/_functions.scss
+++ b/src/bootstrap/_functions.scss
@@ -1,20 +1,18 @@
 // Bootstrap functions
 //
 // Utility mixins and functions for evaluating source code across our variables, maps, and mixins.
+
 // Ascending
 // Used to evaluate Sass maps like our grid breakpoints.
 @mixin _assert-ascending($map, $map-name) {
   $prev-key: null;
   $prev-num: null;
-  @each $key,
-  $num in $map {
-    @if $prev-num==null {
+  @each $key, $num in $map {
+    @if $prev-num == null {
       // Do nothing
-    }
-    @else if not comparable($prev-num, $num) {
+    } @else if not comparable($prev-num, $num) {
       @warn "Potentially invalid value for #{$map-name}: This map must be in ascending order, but key '#{$key}' has value #{$num} whose unit makes it incomparable to #{$prev-num}, the value of the previous key '#{$prev-key}' !";
-    }
-    @else if $prev-num>=$num {
+    } @else if $prev-num >= $num {
       @warn "Invalid value for #{$map-name}: This map must be in ascending order, but key '#{$key}' has value #{$num} which isn't greater than #{$prev-num}, the value of the previous key '#{$prev-key}' !";
     }
     $prev-key: $key;
@@ -27,7 +25,7 @@
 @mixin _assert-starts-at-zero($map) {
   $values: map-values($map);
   $first-value: nth($values, 1);
-  @if $first-value !=0 {
+  @if $first-value != 0 {
     @warn "First breakpoint in `$grid-breakpoints` must start at 0, but starts at #{$first-value}.";
   }
 }
@@ -42,9 +40,11 @@
 // @return {String} - Updated string
 @function str-replace($string, $search, $replace: "") {
   $index: str-index($string, $search);
+
   @if $index {
-    @return str-slice($string, 1, $index - 1)+$replace+str-replace(str-slice($string, $index + str-length($search)), $search, $replace);
+    @return str-slice($string, 1, $index - 1) + $replace + str-replace(str-slice($string, $index + str-length($search)), $search, $replace);
   }
+
   @return $string;
 }
 
@@ -53,11 +53,12 @@
   $r: red($color);
   $g: green($color);
   $b: blue($color);
+
   $yiq: (($r * 299) + ($g * 587) + ($b * 114)) / 1000;
-  @if ($yiq >=$yiq-contrasted-threshold) {
+
+  @if ($yiq >= $yiq-contrasted-threshold) {
     @return $yiq-text-dark;
-  }
-  @else {
+  } @else {
     @return $yiq-text-light;
   }
 }
@@ -80,5 +81,6 @@
   $color: theme-color($color-name);
   $color-base: if($level > 0, $black, $white);
   $level: abs($level);
+
   @return mix($color-base, $color, $level * $theme-color-interval);
 }
