--- a/src/button/style.scss
+++ b/src/button/style.scss
@@ -1,8 +1,10 @@
 @import '../style/functions';
 @import '../style/variables';
 @import '../style/mixins';
+$prefix-cls: 'dashkit-btn';
 
-.btn {
+
+.#{$prefix-cls} {
   display: inline-block;
   font-weight: $btn-font-weight;
   text-align: center;
@@ -38,8 +40,8 @@
 }
 
 // Future-proof disabling of clicks on `<a>` elements
-a.btn.disabled,
-fieldset:disabled a.btn {
+a.#{$prefix-cls}.disabled,
+fieldset:disabled a.#{$prefix-cls} {
   pointer-events: none;
 }
 
@@ -48,14 +50,48 @@ fieldset:disabled a.btn {
 //
 @each $color,
 $value in $theme-colors {
-  .btn-#{$color} {
+  .#{$prefix-cls}-#{$color} {
     @include button-variant($value, $value);
   }
 }
 
 @each $color,
 $value in $theme-colors {
-  .btn-outline-#{$color} {
+  .#{$prefix-cls}-outline-#{$color} {
     @include button-outline-variant($value);
   }
+}
+
+.#{$prefix-cls}-link {
+  font-weight: $font-weight-normal;
+  color: $link-color;
+  background-color: transparent;
+  @include hover {
+    color: $link-hover-color;
+    text-decoration: $link-hover-decoration;
+    background-color: transparent;
+    border-color: transparent;
+  }
+  &:focus,
+  &.focus {
+    text-decoration: $link-hover-decoration;
+    border-color: transparent;
+    box-shadow: none;
+  }
+  &:disabled,
+  &.disabled {
+    color: $btn-link-disabled-color;
+    pointer-events: none;
+  } // No need for an active state here
+}
+
+//
+// Button Sizes
+//
+.#{$prefix-cls}-large {
+  @include button-size($btn-padding-y-lg, $btn-padding-x-lg, $font-size-lg, $btn-line-height-lg, $btn-border-radius-lg);
+}
+
+.#{$prefix-cls}-small {
+  @include button-size($btn-padding-y-sm, $btn-padding-x-sm, $font-size-sm, $btn-line-height-sm, $btn-border-radius-sm);
 }
