--- a/site/component/common/example.scss
+++ b/site/component/common/example.scss
@@ -3,4 +3,9 @@
   padding: 24px;
   border: 1px solid #edf2f9;
   background-color: #fff;
+  margin-top: 24px;
+
+  &:nth-of-type(1) {
+    margin-top: 0;
+  }
 }
