--- a/src/button/style.scss
+++ b/src/button/style.scss
@@ -12,7 +12,7 @@ $prefix-cls: 'dashkit-btn';
   vertical-align: middle;
   user-select: none;
   border: $btn-border-width solid transparent;
-  @include button-size($btn-padding-y, $btn-padding-x, $font-size-base, $btn-line-height, $btn-border-radius);
+  @include button-size($btn-height, $btn-padding-x, $font-size-base, $btn-line-height, $btn-border-radius);
   @include transition($btn-transition);
   @include hover-focus {
     text-decoration: none;
@@ -101,12 +101,17 @@ $value in $theme-colors {
   } // No need for an active state here
 }
 
+.#{$prefix-cls}-rounded {
+  border-radius: 18px;
+}
+
+
 // Button Sizes
 //
 .#{$prefix-cls}-large {
-  @include button-size($btn-padding-y-lg, $btn-padding-x-lg, $font-size-lg, $btn-line-height-lg, $btn-border-radius-lg);
+  @include button-size($btn-height-lg, $btn-padding-x-lg, $font-size-lg, $btn-line-height-lg, $btn-border-radius-lg);
 }
 
 .#{$prefix-cls}-small {
-  @include button-size($btn-padding-y-sm, $btn-padding-x-sm, $font-size-sm, $btn-line-height-sm, $btn-border-radius-sm);
+  @include button-size($btn-height-sm, $btn-padding-x-sm, $font-size-sm, $btn-line-height-sm, $btn-border-radius-sm);
 }
