--- a/src/button/style.scss
+++ b/src/button/style.scss
@@ -102,7 +102,7 @@ $value in $theme-colors {
 }
 
 .#{$prefix-cls}-rounded {
-  border-radius: 18px;
+  border-radius: $btn-height / 2;
 }
 
 
@@ -110,8 +110,16 @@ $value in $theme-colors {
 //
 .#{$prefix-cls}-large {
   @include button-size($btn-height-lg, $btn-padding-x-lg, $font-size-lg, $btn-line-height-lg, $btn-border-radius-lg);
+
+  &.#{$prefix-cls}-rounded {
+    border-radius: $btn-height-lg / 2;
+  }
 }
 
 .#{$prefix-cls}-small {
   @include button-size($btn-height-sm, $btn-padding-x-sm, $font-size-sm, $btn-line-height-sm, $btn-border-radius-sm);
+
+  &.#{$prefix-cls}-rounded {
+    border-radius: $btn-height-sm / 2;
+  }
 }
