--- a/site/component/common/example.scss
+++ b/site/component/common/example.scss
@@ -1,6 +1,5 @@
 .app-example {
   width: 100%;
-  padding: 24px;
   border: 1px solid #edf2f9;
   background-color: #fff;
   margin-top: 24px;
@@ -8,4 +7,31 @@
   &:nth-of-type(1) {
     margin-top: 0;
   }
+}
+
+.app-example-info {
+  position: relative;
+  padding: 18px 32px;
+  border-top: 1px solid #edf2f9;
+}
+
+.app-example-content {
+  padding: 42px 24px 50px;
+}
+
+.app-example-title {
+  position: absolute;
+  top: -15px;
+  height: 30px;
+  padding: 0 8px;
+  left: 24px;
+  line-height: 30px;
+  font-size: 16px;
+  background-color: #fff;
+}
+
+.app-example-code {
+  padding: 24px 24px 0;
+  color: #5e6d82;
+  border-top: 1px dashed #edf2f9;
 }
