--- a/src/style/_reboot.scss
+++ b/src/style/_reboot.scss
@@ -84,15 +84,27 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 26px;
+  font-size: $h1-font-size;
 }
 
 h2 {
-  font-size: 20px;
+  font-size: $h2-font-size;
 }
 
 h3 {
-  font-size: 16px;
+  font-size: $h3-font-size;
+}
+
+h4 {
+  font-size: $h4-font-size;
+}
+
+h5 {
+  font-size: $h5-font-size;
+}
+
+h6 {
+  font-size: $h6-font-size;
 }
 // stylelint-enable selector-list-comma-newline-after
 
