--- a/src/Spin/style.scss
+++ b/src/Spin/style.scss
@@ -1,6 +1,10 @@
-$main-color: #1890ff;
+@import '../style/functions';
+@import '../style/theme';
+@import '../style/mixins';
 
-.spin {
+$prefix-cls: 'dashkit-spin';
+
+.#{$prefix-cls} {
   display: none;
   position: absolute;
   transition: transform 0.3s cubic-bezier(.78, .14, .15, .86);
@@ -14,43 +18,43 @@ $main-color: #1890ff;
   }
 }
 
-.spin-circle {
+.#{$prefix-cls}--circle {
   position: relative;
   display: inline-block;
   width: 24px;
   height: 24px;
   border-radius: 50%;
   border: 2px solid transparent;
-  border-left: 2px solid $main-color;
+  border-left: 2px solid $primary;
   animation: spinRotate 1s infinite linear;
   box-sizing: border-box;
 }
 
-.spin-large {
+.#{$prefix-cls}-large {
   width: 32px;
   height: 32px;
 }
 
-.spin-small {
+.#{$prefix-cls}-small {
   width: 18px;
   height: 18px;
 }
 
-.spin-text {
+.#{$prefix-cls}-text {
   margin-top:5px;
-  color: $main-color;
+  color: $primary;
   font-size: 13px;
 }
 
-.spin-box {
+.#{$prefix-cls}-box {
   position: relative;
 }
 
-.spin-container {
+.#{$prefix-cls}-container {
   position: relative;
 }
 
-.spin-blur {
+.#{$prefix-cls}-blur {
   pointer-events: none;
   user-select: none;
   overflow: hidden;
@@ -70,14 +74,14 @@ $main-color: #1890ff;
   }
 }
 
-.spin-loading {
+.#{$prefix-cls}-loading {
   display: block;
   position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-  .spin {
+  .#{$prefix-cls} {
     position: absolute;
     top: 50%;
     left: 50%;
