feat: spin component

--- a/src/Spin/style.scss
+++ b/src/Spin/style.scss
@@ -18,7 +18,7 @@ $prefix-cls: 'dashkit-spin';
   }
 }
 
-.#{$prefix-cls}--circle {
+.#{$prefix-cls}-circle {
   position: relative;
   display: inline-block;
   width: 24px;
