--- a/src/Spin/style.scss
+++ b/src/Spin/style.scss
@@ -11,7 +11,7 @@ $prefix-cls: 'dashkit-spin';
   vertical-align: middle;
   text-align: center;
   opacity: 0;
-  &.spinning {
+  &.#{$prefix-cls}-spinning {
     opacity: 1;
     position: static;
     display: inline-block;
