--- a/site/component/common/example.scss
+++ b/site/component/common/example.scss
@@ -133,12 +133,27 @@
   height: 30px;
   padding: 0 8px;
   line-height: 30px;
-  font-size: 16px;
+  font-size: 18px;
+  font-weight: 500;
   background-color: #fff;
 }
 
 .app-example-subtitle {
   color: #95aac9;
+
+  > p {
+    margin: 0;
+    padding: 0;
+  }
+
+  code {
+    margin: 0 1px;
+    background-color: #f2f4f5;
+    padding: .2em .4em;
+    border-radius: 3px;
+    font-size: .9em;
+    border: 1px solid #eee;
+  }
 }
 
 .app-example-code {
