--- a/site/component/common/example.scss
+++ b/site/component/common/example.scss
@@ -1,4 +1,4 @@
-.app-example {
+.example {
   width: 100%;
   border: 1px solid #edf2f9;
   background-color: #fff;
@@ -116,17 +116,17 @@
 
 }
 
-.app-example-content {
+.example-content {
   padding: 42px 24px 50px;
 }
 
-.app-example-info {
+.example-info {
   position: relative;
   padding: 16px 24px;
   border-top: 1px solid #edf2f9;
 }
 
-.app-example-title {
+.example-title {
   position: absolute;
   top: -15px;
   left: 16px;
@@ -138,7 +138,7 @@
   background-color: #fff;
 }
 
-.app-example-subtitle {
+.example-subtitle {
   color: #95aac9;
 
   > p {
@@ -156,10 +156,15 @@
   }
 }
 
-.app-example-code {
-  display: none;
+.example-control {
+  position: absolute;
+  right: 16px;
+  bottom: 16px;
+  color: #95aac9;
+  font-size: 18px;
+  cursor: pointer;
 
-  &.show-code {
-    display: block;
+  &:hover {
+    color: #888;
   }
 }
