--- a/site/component/icon/style.scss
+++ b/site/component/icon/style.scss
@@ -1,5 +1,28 @@
 .icon-list {
-  .dashkit-icon {
-    margin-right: 7px;
+  width: 100%;
+
+  &::after {
+    content: '';
+    display: table;
+    clear: both;
+  }
+}
+
+.icon-item {
+  float: left;
+  width: 20%;
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  background-color: #f2f4f5;
+  border-radius: 5px;
+  margin-right: 15px;
+
+  &:nth-of-type(4n) {
+    margin-right: 0;
+  }
+
+  > span {
+    margin-left: 10px;
   }
 }
