--- a/src/icon/style.scss
+++ b/src/icon/style.scss
@@ -1,12 +1,1120 @@
 $prefix-cls: 'dashkit-icon';
 
-.#{$prefix-cls} {
-  display: inline-block;
-  width: 24px;
-  height: 24px;
-  line-height: 1;
+@font-face {
+  font-family: 'feather';
+  src: url('/static/fonts/feather.eot?t=1525787366991');
+  /* IE9*/
+  src: url('/static/fonts/feather.eot?t=1525787366991#iefix') format('embedded-opentype'),
+  /* IE6-IE8 */
+    url('/static/fonts/feather.woff?t=1525787366991') format('woff'),
+    /* chrome, firefox */
+    url('/static/fonts/feather.ttf?t=1525787366991') format('truetype'),
+    /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+    url('/static/fonts/feather.svg?t=1525787366991#feather') format('svg');
+    /* iOS 4.1- */
 }
 
-.#{$prefix-cls}-home {
-  
+.#{$prefix-cls} {
+  display: inline-block;
+  font-size: 24px;
+  font-style: normal;
+  vertical-align: baseline;
+  text-align: center;
+  text-transform: none;
+  line-height: 1;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  &:before {
+    display: block;
+    font-family: 'feather' !important;
+  }
+}
+
+.#{$prefix-cls}-alert-octagon:before {
+  content: "\e81b";
+}
+
+.#{$prefix-cls}-alert-circle:before {
+  content: "\e81c";
+}
+
+.#{$prefix-cls}-activity:before {
+  content: "\e81d";
+}
+
+.#{$prefix-cls}-alert-triangle:before {
+  content: "\e81e";
+}
+
+.#{$prefix-cls}-align-center:before {
+  content: "\e81f";
+}
+
+.#{$prefix-cls}-airplay:before {
+  content: "\e820";
+}
+
+.#{$prefix-cls}-align-justify:before {
+  content: "\e821";
+}
+
+.#{$prefix-cls}-align-left:before {
+  content: "\e822";
+}
+
+.#{$prefix-cls}-align-right:before {
+  content: "\e823";
+}
+
+.#{$prefix-cls}-arrow-down-left:before {
+  content: "\e824";
+}
+
+.#{$prefix-cls}-arrow-down-right:before {
+  content: "\e825";
+}
+
+.#{$prefix-cls}-anchor:before {
+  content: "\e826";
+}
+
+.#{$prefix-cls}-aperture:before {
+  content: "\e827";
+}
+
+.#{$prefix-cls}-arrow-left:before {
+  content: "\e828";
+}
+
+.#{$prefix-cls}-arrow-right:before {
+  content: "\e829";
+}
+
+.#{$prefix-cls}-arrow-down:before {
+  content: "\e82a";
+}
+
+.#{$prefix-cls}-arrow-up-left:before {
+  content: "\e82b";
+}
+
+.#{$prefix-cls}-arrow-up-right:before {
+  content: "\e82c";
+}
+
+.#{$prefix-cls}-arrow-up:before {
+  content: "\e82d";
+}
+
+.#{$prefix-cls}-award:before {
+  content: "\e82e";
+}
+
+.#{$prefix-cls}-bar-chart:before {
+  content: "\e82f";
+}
+
+.#{$prefix-cls}-at-sign:before {
+  content: "\e830";
+}
+
+.#{$prefix-cls}-bar-chart-2:before {
+  content: "\e831";
+}
+
+.#{$prefix-cls}-battery-charging:before {
+  content: "\e832";
+}
+
+.#{$prefix-cls}-bell-off:before {
+  content: "\e833";
+}
+
+.#{$prefix-cls}-battery:before {
+  content: "\e834";
+}
+
+.#{$prefix-cls}-bluetooth:before {
+  content: "\e835";
+}
+
+.#{$prefix-cls}-bell:before {
+  content: "\e836";
+}
+
+.#{$prefix-cls}-book:before {
+  content: "\e837";
+}
+
+.#{$prefix-cls}-briefcase:before {
+  content: "\e838";
+}
+
+.#{$prefix-cls}-camera-off:before {
+  content: "\e839";
+}
+
+.#{$prefix-cls}-calendar:before {
+  content: "\e83a";
+}
+
+.#{$prefix-cls}-bookmark:before {
+  content: "\e83b";
+}
+
+.#{$prefix-cls}-box:before {
+  content: "\e83c";
+}
+
+.#{$prefix-cls}-camera:before {
+  content: "\e83d";
+}
+
+.#{$prefix-cls}-check-circle:before {
+  content: "\e83e";
+}
+
+.#{$prefix-cls}-check:before {
+  content: "\e83f";
+}
+
+.#{$prefix-cls}-check-square:before {
+  content: "\e840";
+}
+
+.#{$prefix-cls}-cast:before {
+  content: "\e841";
+}
+
+.#{$prefix-cls}-chevron-down:before {
+  content: "\e842";
+}
+
+.#{$prefix-cls}-chevron-left:before {
+  content: "\e843";
+}
+
+.#{$prefix-cls}-chevron-right:before {
+  content: "\e844";
+}
+
+.#{$prefix-cls}-chevron-up:before {
+  content: "\e845";
+}
+
+.#{$prefix-cls}-chevrons-down:before {
+  content: "\e846";
+}
+
+.#{$prefix-cls}-chevrons-right:before {
+  content: "\e847";
+}
+
+.#{$prefix-cls}-chevrons-up:before {
+  content: "\e848";
+}
+
+.#{$prefix-cls}-chevrons-left:before {
+  content: "\e849";
+}
+
+.#{$prefix-cls}-circle:before {
+  content: "\e84a";
+}
+
+.#{$prefix-cls}-clipboard:before {
+  content: "\e84b";
+}
+
+.#{$prefix-cls}-chrome:before {
+  content: "\e84c";
+}
+
+.#{$prefix-cls}-clock:before {
+  content: "\e84d";
+}
+
+.#{$prefix-cls}-cloud-lightning:before {
+  content: "\e84e";
+}
+
+.#{$prefix-cls}-cloud-drizzle:before {
+  content: "\e84f";
+}
+
+.#{$prefix-cls}-cloud-rain:before {
+  content: "\e850";
+}
+
+.#{$prefix-cls}-cloud-off:before {
+  content: "\e851";
+}
+
+.#{$prefix-cls}-codepen:before {
+  content: "\e852";
+}
+
+.#{$prefix-cls}-cloud-snow:before {
+  content: "\e853";
+}
+
+.#{$prefix-cls}-compass:before {
+  content: "\e854";
+}
+
+.#{$prefix-cls}-copy:before {
+  content: "\e855";
+}
+
+.#{$prefix-cls}-corner-down-right:before {
+  content: "\e856";
+}
+
+.#{$prefix-cls}-corner-down-left:before {
+  content: "\e857";
+}
+
+.#{$prefix-cls}-corner-left-down:before {
+  content: "\e858";
+}
+
+.#{$prefix-cls}-corner-left-up:before {
+  content: "\e859";
+}
+
+.#{$prefix-cls}-corner-up-left:before {
+  content: "\e85a";
+}
+
+.#{$prefix-cls}-corner-up-right:before {
+  content: "\e85b";
+}
+
+.#{$prefix-cls}-corner-right-down:before {
+  content: "\e85c";
+}
+
+.#{$prefix-cls}-corner-right-up:before {
+  content: "\e85d";
+}
+
+.#{$prefix-cls}-cpu:before {
+  content: "\e85e";
+}
+
+.#{$prefix-cls}-credit-card:before {
+  content: "\e85f";
+}
+
+.#{$prefix-cls}-crosshair:before {
+  content: "\e860";
+}
+
+.#{$prefix-cls}-disc:before {
+  content: "\e861";
+}
+
+.#{$prefix-cls}-delete:before {
+  content: "\e862";
+}
+
+.#{$prefix-cls}-download-cloud:before {
+  content: "\e863";
+}
+
+.#{$prefix-cls}-download:before {
+  content: "\e864";
+}
+
+.#{$prefix-cls}-droplet:before {
+  content: "\e865";
+}
+
+.#{$prefix-cls}-edit-2:before {
+  content: "\e866";
+}
+
+.#{$prefix-cls}-edit:before {
+  content: "\e867";
+}
+
+.#{$prefix-cls}-edit-1:before {
+  content: "\e868";
+}
+
+.#{$prefix-cls}-external-link:before {
+  content: "\e869";
+}
+
+.#{$prefix-cls}-eye:before {
+  content: "\e86a";
+}
+
+.#{$prefix-cls}-feather:before {
+  content: "\e86b";
+}
+
+.#{$prefix-cls}-facebook:before {
+  content: "\e86c";
+}
+
+.#{$prefix-cls}-file-minus:before {
+  content: "\e86d";
+}
+
+.#{$prefix-cls}-eye-off:before {
+  content: "\e86e";
+}
+
+.#{$prefix-cls}-fast-forward:before {
+  content: "\e86f";
+}
+
+.#{$prefix-cls}-file-text:before {
+  content: "\e870";
+}
+
+.#{$prefix-cls}-film:before {
+  content: "\e871";
+}
+
+.#{$prefix-cls}-file:before {
+  content: "\e872";
+}
+
+.#{$prefix-cls}-file-plus:before {
+  content: "\e873";
+}
+
+.#{$prefix-cls}-folder:before {
+  content: "\e874";
+}
+
+.#{$prefix-cls}-filter:before {
+  content: "\e875";
+}
+
+.#{$prefix-cls}-flag:before {
+  content: "\e876";
+}
+
+.#{$prefix-cls}-globe:before {
+  content: "\e877";
+}
+
+.#{$prefix-cls}-grid:before {
+  content: "\e878";
+}
+
+.#{$prefix-cls}-heart:before {
+  content: "\e879";
+}
+
+.#{$prefix-cls}-home:before {
+  content: "\e87a";
+}
+
+.#{$prefix-cls}-github:before {
+  content: "\e87b";
+}
+
+.#{$prefix-cls}-image:before {
+  content: "\e87c";
+}
+
+.#{$prefix-cls}-inbox:before {
+  content: "\e87d";
+}
+
+.#{$prefix-cls}-layers:before {
+  content: "\e87e";
+}
+
+.#{$prefix-cls}-info:before {
+  content: "\e87f";
+}
+
+.#{$prefix-cls}-instagram:before {
+  content: "\e880";
+}
+
+.#{$prefix-cls}-layout:before {
+  content: "\e881";
+}
+
+.#{$prefix-cls}-link-2:before {
+  content: "\e882";
+}
+
+.#{$prefix-cls}-life-buoy:before {
+  content: "\e883";
+}
+
+.#{$prefix-cls}-link:before {
+  content: "\e884";
+}
+
+.#{$prefix-cls}-log-in:before {
+  content: "\e885";
+}
+
+.#{$prefix-cls}-list:before {
+  content: "\e886";
+}
+
+.#{$prefix-cls}-lock:before {
+  content: "\e887";
+}
+
+.#{$prefix-cls}-log-out:before {
+  content: "\e888";
+}
+
+.#{$prefix-cls}-loader:before {
+  content: "\e889";
+}
+
+.#{$prefix-cls}-mail:before {
+  content: "\e88a";
+}
+
+.#{$prefix-cls}-maximize-2:before {
+  content: "\e88b";
+}
+
+.#{$prefix-cls}-map:before {
+  content: "\e88c";
+}
+
+.#{$prefix-cls}-map-pin:before {
+  content: "\e88e";
+}
+
+.#{$prefix-cls}-menu:before {
+  content: "\e88f";
+}
+
+.#{$prefix-cls}-message-circle:before {
+  content: "\e890";
+}
+
+.#{$prefix-cls}-message-square:before {
+  content: "\e891";
+}
+
+.#{$prefix-cls}-minimize-2:before {
+  content: "\e892";
+}
+
+.#{$prefix-cls}-mic-off:before {
+  content: "\e893";
+}
+
+.#{$prefix-cls}-minus-circle:before {
+  content: "\e894";
+}
+
+.#{$prefix-cls}-mic:before {
+  content: "\e895";
+}
+
+.#{$prefix-cls}-minus-square:before {
+  content: "\e896";
+}
+
+.#{$prefix-cls}-minus:before {
+  content: "\e897";
+}
+
+.#{$prefix-cls}-moon:before {
+  content: "\e898";
+}
+
+.#{$prefix-cls}-monitor:before {
+  content: "\e899";
+}
+
+.#{$prefix-cls}-more-vertical:before {
+  content: "\e89a";
+}
+
+.#{$prefix-cls}-more-horizontal:before {
+  content: "\e89b";
+}
+
+.#{$prefix-cls}-move:before {
+  content: "\e89c";
+}
+
+.#{$prefix-cls}-music:before {
+  content: "\e89d";
+}
+
+.#{$prefix-cls}-navigation-2:before {
+  content: "\e89e";
+}
+
+.#{$prefix-cls}-navigation:before {
+  content: "\e89f";
+}
+
+.#{$prefix-cls}-octagon:before {
+  content: "\e8a0";
+}
+
+.#{$prefix-cls}-package:before {
+  content: "\e8a1";
+}
+
+.#{$prefix-cls}-pause-circle:before {
+  content: "\e8a2";
+}
+
+.#{$prefix-cls}-pause:before {
+  content: "\e8a3";
+}
+
+.#{$prefix-cls}-percent:before {
+  content: "\e8a4";
+}
+
+.#{$prefix-cls}-phone-call:before {
+  content: "\e8a5";
+}
+
+.#{$prefix-cls}-phone-forwarded:before {
+  content: "\e8a6";
+}
+
+.#{$prefix-cls}-phone-missed:before {
+  content: "\e8a7";
+}
+
+.#{$prefix-cls}-phone-off:before {
+  content: "\e8a8";
+}
+
+.#{$prefix-cls}-phone-incoming:before {
+  content: "\e8a9";
+}
+
+.#{$prefix-cls}-phone:before {
+  content: "\e8aa";
+}
+
+.#{$prefix-cls}-phone-outgoing:before {
+  content: "\e8ab";
+}
+
+.#{$prefix-cls}-pie-chart:before {
+  content: "\e8ac";
+}
+
+.#{$prefix-cls}-play-circle:before {
+  content: "\e8ad";
+}
+
+.#{$prefix-cls}-play:before {
+  content: "\e8ae";
+}
+
+.#{$prefix-cls}-plus-square:before {
+  content: "\e8af";
+}
+
+.#{$prefix-cls}-plus-circle:before {
+  content: "\e8b0";
+}
+
+.#{$prefix-cls}-plus:before {
+  content: "\e8b1";
+}
+
+.#{$prefix-cls}-pocket:before {
+  content: "\e8b2";
+}
+
+.#{$prefix-cls}-printer:before {
+  content: "\e8b3";
+}
+
+.#{$prefix-cls}-power:before {
+  content: "\e8b4";
+}
+
+.#{$prefix-cls}-radio:before {
+  content: "\e8b5";
+}
+
+.#{$prefix-cls}-repeat:before {
+  content: "\e8b6";
+}
+
+.#{$prefix-cls}-refresh-ccw:before {
+  content: "\e8b7";
+}
+
+.#{$prefix-cls}-rewind:before {
+  content: "\e8b8";
+}
+
+.#{$prefix-cls}-rotate-ccw:before {
+  content: "\e8b9";
+}
+
+.#{$prefix-cls}-refresh-cw:before {
+  content: "\e8ba";
+}
+
+.#{$prefix-cls}-rotate-cw:before {
+  content: "\e8bb";
+}
+
+.#{$prefix-cls}-save:before {
+  content: "\e8bc";
+}
+
+.#{$prefix-cls}-search:before {
+  content: "\e8bd";
+}
+
+.#{$prefix-cls}-server:before {
+  content: "\e8be";
+}
+
+.#{$prefix-cls}-scissors:before {
+  content: "\e8bf";
+}
+
+.#{$prefix-cls}-share-2:before {
+  content: "\e8c0";
+}
+
+.#{$prefix-cls}-share:before {
+  content: "\e8c1";
+}
+
+.#{$prefix-cls}-shield:before {
+  content: "\e8c2";
+}
+
+.#{$prefix-cls}-settings:before {
+  content: "\e8c3";
+}
+
+.#{$prefix-cls}-skip-back:before {
+  content: "\e8c4";
+}
+
+.#{$prefix-cls}-shuffle:before {
+  content: "\e8c5";
+}
+
+.#{$prefix-cls}-sidebar:before {
+  content: "\e8c6";
+}
+
+.#{$prefix-cls}-skip-forward:before {
+  content: "\e8c7";
+}
+
+.#{$prefix-cls}-slack:before {
+  content: "\e8c8";
+}
+
+.#{$prefix-cls}-slash:before {
+  content: "\e8c9";
+}
+
+.#{$prefix-cls}-smartphone:before {
+  content: "\e8ca";
+}
+
+.#{$prefix-cls}-square:before {
+  content: "\e8cb";
+}
+
+.#{$prefix-cls}-speaker:before {
+  content: "\e8cc";
+}
+
+.#{$prefix-cls}-star:before {
+  content: "\e8cd";
+}
+
+.#{$prefix-cls}-stop-circle:before {
+  content: "\e8ce";
+}
+
+.#{$prefix-cls}-sun:before {
+  content: "\e8cf";
+}
+
+.#{$prefix-cls}-sunrise:before {
+  content: "\e8d0";
+}
+
+.#{$prefix-cls}-tablet:before {
+  content: "\e8d1";
+}
+
+.#{$prefix-cls}-tag:before {
+  content: "\e8d2";
+}
+
+.#{$prefix-cls}-sunset:before {
+  content: "\e8d3";
+}
+
+.#{$prefix-cls}-target:before {
+  content: "\e8d4";
+}
+
+.#{$prefix-cls}-thermometer:before {
+  content: "\e8d5";
+}
+
+.#{$prefix-cls}-thumbs-up:before {
+  content: "\e8d6";
+}
+
+.#{$prefix-cls}-thumbs-down:before {
+  content: "\e8d7";
+}
+
+.#{$prefix-cls}-toggle-left:before {
+  content: "\e8d8";
+}
+
+.#{$prefix-cls}-toggle-right:before {
+  content: "\e8d9";
+}
+
+.#{$prefix-cls}-trash-2:before {
+  content: "\e8da";
+}
+
+.#{$prefix-cls}-trash:before {
+  content: "\e8db";
+}
+
+.#{$prefix-cls}-trending-up:before {
+  content: "\e8dc";
+}
+
+.#{$prefix-cls}-trending-down:before {
+  content: "\e8dd";
+}
+
+.#{$prefix-cls}-triangle:before {
+  content: "\e8de";
+}
+
+.#{$prefix-cls}-type:before {
+  content: "\e8df";
+}
+
+.#{$prefix-cls}-twitter:before {
+  content: "\e8e0";
+}
+
+.#{$prefix-cls}-upload:before {
+  content: "\e8e1";
+}
+
+.#{$prefix-cls}-umbrella:before {
+  content: "\e8e2";
+}
+
+.#{$prefix-cls}-upload-cloud:before {
+  content: "\e8e3";
+}
+
+.#{$prefix-cls}-unlock:before {
+  content: "\e8e4";
+}
+
+.#{$prefix-cls}-user-check:before {
+  content: "\e8e5";
+}
+
+.#{$prefix-cls}-user-minus:before {
+  content: "\e8e6";
+}
+
+.#{$prefix-cls}-user-plus:before {
+  content: "\e8e7";
+}
+
+.#{$prefix-cls}-user-x:before {
+  content: "\e8e8";
+}
+
+.#{$prefix-cls}-user:before {
+  content: "\e8e9";
+}
+
+.#{$prefix-cls}-users:before {
+  content: "\e8ea";
+}
+
+.#{$prefix-cls}-video-off:before {
+  content: "\e8eb";
+}
+
+.#{$prefix-cls}-video:before {
+  content: "\e8ec";
+}
+
+.#{$prefix-cls}-voicemail:before {
+  content: "\e8ed";
+}
+
+.#{$prefix-cls}-volume-x:before {
+  content: "\e8ee";
+}
+
+.#{$prefix-cls}-volume-2:before {
+  content: "\e8ef";
+}
+
+.#{$prefix-cls}-volume-1:before {
+  content: "\e8f0";
+}
+
+.#{$prefix-cls}-volume:before {
+  content: "\e8f1";
+}
+
+.#{$prefix-cls}-watch:before {
+  content: "\e8f2";
+}
+
+.#{$prefix-cls}-wifi:before {
+  content: "\e8f3";
+}
+
+.#{$prefix-cls}-x-square:before {
+  content: "\e8f4";
+}
+
+.#{$prefix-cls}-wind:before {
+  content: "\e8f5";
+}
+
+.#{$prefix-cls}-x:before {
+  content: "\e8f6";
+}
+
+.#{$prefix-cls}-x-circle:before {
+  content: "\e8f7";
+}
+
+.#{$prefix-cls}-zap:before {
+  content: "\e8f8";
+}
+
+.#{$prefix-cls}-zoom-in:before {
+  content: "\e8f9";
+}
+
+.#{$prefix-cls}-zoom-out:before {
+  content: "\e8fa";
+}
+
+.#{$prefix-cls}-command:before {
+  content: "\e8fb";
+}
+
+.#{$prefix-cls}-cloud:before {
+  content: "\e8fc";
+}
+
+.#{$prefix-cls}-hash:before {
+  content: "\e8fd";
+}
+
+.#{$prefix-cls}-headphones:before {
+  content: "\e8fe";
+}
+
+.#{$prefix-cls}-underline:before {
+  content: "\e8ff";
+}
+
+.#{$prefix-cls}-italic:before {
+  content: "\e900";
+}
+
+.#{$prefix-cls}-bold:before {
+  content: "\e901";
+}
+
+.#{$prefix-cls}-crop:before {
+  content: "\e902";
+}
+
+.#{$prefix-cls}-help-circle:before {
+  content: "\e903";
+}
+
+.#{$prefix-cls}-paperclip:before {
+  content: "\e904";
+}
+
+.#{$prefix-cls}-shopping-cart:before {
+  content: "\e905";
+}
+
+.#{$prefix-cls}-tv:before {
+  content: "\e906";
+}
+
+.#{$prefix-cls}-wifi-off:before {
+  content: "\e907";
+}
+
+.#{$prefix-cls}-minimize:before {
+  content: "\e88d";
+}
+
+.#{$prefix-cls}-maximize:before {
+  content: "\e908";
+}
+
+.#{$prefix-cls}-gitlab:before {
+  content: "\e909";
+}
+
+.#{$prefix-cls}-sliders:before {
+  content: "\e90a";
+}
+
+.#{$prefix-cls}-star-on:before {
+  content: "\e90b";
+}
+
+.#{$prefix-cls}-heart-on:before {
+  content: "\e90c";
+}
+
+.#{$prefix-cls}-archive:before {
+  content: "\e90d";
+}
+
+.#{$prefix-cls}-arrow-down-circle:before {
+  content: "\e90e";
+}
+
+.#{$prefix-cls}-arrow-up-circle:before {
+  content: "\e90f";
+}
+
+.#{$prefix-cls}-arrow-left-circle:before {
+  content: "\e910";
+}
+
+.#{$prefix-cls}-arrow-right-circle:before {
+  content: "\e911";
+}
+
+.#{$prefix-cls}-bar-chart-line-:before {
+  content: "\e912";
+}
+
+.#{$prefix-cls}-bar-chart-line:before {
+  content: "\e913";
+}
+
+.#{$prefix-cls}-book-open:before {
+  content: "\e914";
+}
+
+.#{$prefix-cls}-code:before {
+  content: "\e915";
+}
+
+.#{$prefix-cls}-database:before {
+  content: "\e916";
+}
+
+.#{$prefix-cls}-dollar-sign:before {
+  content: "\e917";
+}
+
+.#{$prefix-cls}-folder-plus:before {
+  content: "\e918";
+}
+
+.#{$prefix-cls}-gift:before {
+  content: "\e919";
+}
+
+.#{$prefix-cls}-folder-minus:before {
+  content: "\e91a";
+}
+
+.#{$prefix-cls}-git-commit:before {
+  content: "\e91b";
+}
+
+.#{$prefix-cls}-git-branch:before {
+  content: "\e91c";
+}
+
+.#{$prefix-cls}-git-pull-request:before {
+  content: "\e91d";
+}
+
+.#{$prefix-cls}-git-merge:before {
+  content: "\e91e";
+}
+
+.#{$prefix-cls}-linkedin:before {
+  content: "\e91f";
+}
+
+.#{$prefix-cls}-hard-drive:before {
+  content: "\e920";
+}
+
+.#{$prefix-cls}-more-vertical-:before {
+  content: "\e921";
+}
+
+.#{$prefix-cls}-more-horizontal-:before {
+  content: "\e922";
+}
+
+.#{$prefix-cls}-rss:before {
+  content: "\e923";
+}
+
+.#{$prefix-cls}-send:before {
+  content: "\e924";
+}
+
+.#{$prefix-cls}-shield-off:before {
+  content: "\e925";
+}
+
+.#{$prefix-cls}-shopping-bag:before {
+  content: "\e926";
+}
+
+.#{$prefix-cls}-terminal:before {
+  content: "\e927";
+}
+
+.#{$prefix-cls}-truck:before {
+  content: "\e928";
+}
+
+.#{$prefix-cls}-zap-off:before {
+  content: "\e929";
+}
+
+.#{$prefix-cls}-youtube:before {
+  content: "\e92a";
 }
