--- a/site/component/icon/style.scss
+++ b/site/component/icon/style.scss
@@ -17,6 +17,8 @@
   background-color: #f2f4f5;
   border-radius: 5px;
   margin-right: 15px;
+  margin-bottom: 15px;
+  cursor: pointer;
 
   &:nth-of-type(4n) {
     margin-right: 0;
