--- a/site/component/icon/style.scss
+++ b/site/component/icon/style.scss
@@ -8,16 +8,18 @@
   }
 }
 
-.icon-item {
+.icon-item-wrapper {
   float: left;
   width: 20%;
+  padding: 8px;
+}
+
+.icon-item {
   display: flex;
   align-items: center;
   padding: 20px;
   background-color: #f2f4f5;
   border-radius: 5px;
-  margin-right: 15px;
-  margin-bottom: 15px;
   cursor: pointer;
 
   &:nth-of-type(4n) {
