--- a/src/style/_reboot.scss
+++ b/src/style/_reboot.scss
@@ -142,7 +142,7 @@ ol,
 ul,
 dl {
   margin-top: 0;
-  margin-bottom: 1rem;
+  margin-bottom: 16px;
 }
 
 ol ol,
@@ -220,11 +220,9 @@ a {
 // See https://github.com/twbs/bootstrap/issues/19402
 
 a:not([href]):not([tabindex]) {
-  color: inherit;
   text-decoration: none;
 
   @include hover-focus {
-    color: inherit;
     text-decoration: none;
   }
 
