--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -131,19 +131,19 @@ $sizes: map-merge(
 
 //Body
 //
-$body-bg : $white !default;
-$body-color : $gray-900 !default;
+$body-bg:                     $white !default;
+$body-color:                  $gray-900 !default;
 
 // Links
 //
-$link-color : theme-color("primary") !default;
-$link-decoration : none !default;
-$link-hover-color : darken($link-color, 15%) !default;
-$link-hover-decoration : underline !default;
+$link-color:                  theme-color("primary") !default;
+$link-decoration:             none !default;
+$link-hover-color:            darken($link-color, 15%) !default;
+$link-hover-decoration:       underline !default;
 
 // Paragraphs
 //
-$paragraph-margin-bottom:   16px !default;
+$paragraph-margin-bottom:     16px !default;
 
 // Grid columns
 //
@@ -300,26 +300,32 @@ $switch-transition:           background-color .15s ease-in-out, border-color .1
 $switch-focus-box-shadow:     0 0 0 1px #fff, 0 0 0 2.5px rgba($component-active-bg, .25) !default;
 
 // Pagination
-// 
-$pagination-padding-y:              .5rem !default;
-$pagination-padding-x:              .75rem !default;
-$pagination-padding-y-sm:           .25rem !default;
-$pagination-padding-x-sm:           .5rem !default;
-$pagination-padding-y-lg:           .75rem !default;
-$pagination-padding-x-lg:           1.5rem !default;
-$pagination-line-height:            1.25 !default;
+//
+$pagination-size:                   32px !default;
+$pagination-size-sm:                24px !default;
+$pagination-size-lg:                40px !default;
+$pagination-font-size:              $font-size-base !default;
+$pagination-font-size-sm:           $font-size-sm !default;
+$pagination-font-size-lg:           $font-size-lg !default;
+$pagination-padding-x:              4px !default;
+$pagination-padding-x-sm:           3px !default;
+$pagination-padding-x-lg:           5px !default;
+$pagination-margin-right:           8px !default;
 
-$pagination-color:                  $link-color !default;
+$pagination-color:                  $gray-600 !default;
 $pagination-bg:                     $white !default;
 $pagination-border-width:           $border-width !default;
 $pagination-border-color:           $border-color !default;
+$pagination-border-radius:          $border-radius !default;
+$pagination-border-radius-lg:       $border-radius-lg !default;
+$pagination-border-radius-sm:       $border-radius-sm !default;
 
-$pagination-focus-box-shadow:       0 0 0 3px rgba($component-active-bg, .25) !default;
+$pagination-focus-box-shadow:       0 0 0 2px rgba($component-active-bg, .25) !default;
 $pagination-focus-outline:          0 !default;
 
-$pagination-hover-color:            $link-hover-color !default;
-$pagination-hover-bg:               $gray-200 !default;
-$pagination-hover-border-color:     $gray-300 !default;
+$pagination-hover-color:            $primary !default;
+$pagination-hover-bg:               #f9fbfd !default;
+$pagination-hover-border-color:     $border-width !default;
 
 $pagination-active-color:           $component-active-color !default;
 $pagination-active-bg:              $component-active-bg !default;
