! feat: pagination component

--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -334,3 +334,4 @@ $pagination-active-border-color:    $pagination-active-bg !default;
 $pagination-disabled-color:         $gray-600 !default;
 $pagination-disabled-bg:            $white !default;
 $pagination-disabled-border-color:  $gray-300 !default;
+$pagination-disabled-opacity:       .65 !default;
