--- a/site/component/common/example.scss
+++ b/site/component/common/example.scss
@@ -122,7 +122,7 @@
 
 .example-info {
   position: relative;
-  padding: 16px 24px;
+  padding: 16px 30px 16px 24px;
   border-top: 1px solid #edf2f9;
 }
 
@@ -158,7 +158,7 @@
 
 .example-control {
   position: absolute;
-  right: 16px;
+  right: 10px;
   bottom: 16px;
   color: #95aac9;
   font-size: 18px;
