--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -94,7 +94,7 @@ $yiq-text-light:            $white !default;
 //
 $enable-caret:              true !default;
 $enable-rounded:            true !default;
-$enable-shadows:            false !default;
+$enable-shadows:            true !default;
 $enable-gradients:          false !default;
 $enable-transitions:        true !default;
 $enable-hover-media-query:  false !default;
@@ -335,3 +335,31 @@ $pagination-disabled-color:         $gray-600 !default;
 $pagination-disabled-bg:            $white !default;
 $pagination-disabled-border-color:  $gray-300 !default;
 $pagination-disabled-opacity:       .65 !default;
+
+
+// Input
+// 
+$input-height:                      32px !default;
+$input-padding-y:                   11px !default;
+$input-padding-x:                   4px !default;
+
+$input-color:                       $gray-700 !default;
+$input-bg:                          $white !default;
+$input-disabled-bg:                 $gray-200 !default;
+
+$input-border-width:                $border-width !default;
+$input-border-color:                #d2ddec !default;
+$input-box-shadow:                  inset 0 1px 1px rgba($primary, .075) !default;
+$input-transition:                  border-color .15s ease-in-out, box-shadow .15s ease-in-out !default;
+$input-placeholder-color:           #b1c2d9 !default;
+$input-border-radius:               $border-radius !default;
+$input-border-radius-lg:            $border-radius-lg !default;
+$input-border-radius-sm:            $border-radius-sm !default;
+
+$input-focus-bg:                    $input-bg !default;
+$input-focus-border-color:          $primary !default;
+$input-focus-color:                 lighten($component-active-bg, 25%) !default;
+$input-focus-width:                 2px !default;
+$input-focus-box-shadow:            0 0 0 $input-focus-width $input-focus-color !default;
+
+$input-hover-border-color:          $input-focus-border-color !default;
