--- a/src/style/_reboot.scss
+++ b/src/style/_reboot.scss
@@ -26,14 +26,6 @@ html {
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block;
 }
-// stylelint-enable selector-list-comma-newline-after
-
-// Body
-//
-// 1. Remove the margin in all browsers.
-// 2. As a best practice, apply a default `background-color`.
-// 3. Set an explicit initial text-align value so that we can later use the
-//    the `inherit` value on things like `<th>` elements.
 
 body {
   margin: 0; // 1
@@ -46,20 +38,9 @@ body {
   background-color: $body-bg; // 2
 }
 
-// Suppress the focus outline on elements that cannot be accessed via keyboard.
-// This prevents an unwanted focus outline from appearing around elements that
-// might still respond to pointer events.
-//
-// Credit: https://github.com/suitcss/base
 [tabindex="-1"]:focus {
   outline: 0 !important;
 }
-
-
-// Content grouping
-//
-// 1. Add the correct box sizing in Firefox.
-// 2. Show the overflow in Edge and IE.
 
 hr {
   box-sizing: content-box; // 1
@@ -67,16 +48,6 @@ hr {
   overflow: visible; // 2
 }
 
-
-//
-// Typography
-//
-
-// Remove top margins from headings
-//
-// By default, `<h1>`-`<h6>` all receive top and bottom margins. We nuke the top
-// margin for easier control within type scales as it avoids margin collapsing.
-// stylelint-disable selector-list-comma-newline-after
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: $headings-margin-bottom;
@@ -106,23 +77,11 @@ h5 {
 h6 {
   font-size: $h6-font-size;
 }
-// stylelint-enable selector-list-comma-newline-after
 
-// Reset margins on paragraphs
-//
-// Similarly, the top margin on `<p>`s get reset. However, we also reset the
-// bottom margin to use `rem` units instead of `em`.
 p {
   margin-top: 0;
   margin-bottom: $paragraph-margin-bottom;
 }
-
-// Abbreviations
-//
-// 1. Remove the bottom border in Firefox 39-.
-// 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
-// 3. Add explicit cursor to indicate changed behavior.
-// 4. Duplicate behavior to the data-* attribute for our tooltip plugin
 
 abbr[title],
 abbr[data-original-title] { // 4
@@ -180,11 +139,6 @@ small {
   font-size: 80%; // Add the correct font size in all browsers
 }
 
-//
-// Prevent `sub` and `sup` elements from affecting the line height in
-// all browsers.
-//
-
 sub,
 sup {
   position: relative;
@@ -197,27 +151,20 @@ sub { bottom: -.25em; }
 sup { top: -.5em; }
 
 
-//
 // Links
 //
 
 a {
   color: $link-color;
   text-decoration: $link-decoration;
-  background-color: transparent; // Remove the gray background on active links in IE 10.
-  -webkit-text-decoration-skip: objects; // Remove gaps in links underline in iOS 8+ and Safari 8+.
+  background-color: transparent;
+  -webkit-text-decoration-skip: objects;
 
   @include hover {
     color: $link-hover-color;
     text-decoration: $link-hover-decoration;
   }
 }
-
-// And undo these styles for placeholder links/named anchors (without href)
-// which have not been made explicitly keyboard-focusable (without tabindex).
-// It would be more straightforward to just use a[href] in previous block, but that
-// causes specificity issues in many other styles that are too complex to fix.
-// See https://github.com/twbs/bootstrap/issues/19402
 
 a:not([href]):not([tabindex]) {
   text-decoration: none;
@@ -231,8 +178,6 @@ a:not([href]):not([tabindex]) {
   }
 }
 
-
-//
 // Code
 //
 
@@ -245,51 +190,57 @@ samp {
 }
 
 pre {
-  // Remove browser default top margin
   margin-top: 0;
-  // Reset browser default of `1em` to use `rem`s
-  margin-bottom: 1rem;
-  // Don't allow content to break outside
+  margin-bottom: 16px;
   overflow: auto;
-  // We have @viewport set which causes scrollbars to overlap content in IE11 and Edge, so
-  // we force a non-overlapping, non-auto-hiding scrollbar to counteract.
-  -ms-overflow-style: scrollbar;
 }
 
-
-//
-// Figures
-//
-
 figure {
-  // Apply a consistent margin strategy (matches our type styles).
   margin: 0 0 1rem;
 }
 
-
-//
-// Images and content
-//
-
 img {
   vertical-align: middle;
-  border-style: none; // Remove the border on images inside links in IE 10-.
+  border-style: none;
 }
 
 svg {
-  // Workaround for the SVG overflow bug in IE10/11 is still required.
-  // See https://github.com/twbs/bootstrap/issues/26878
   overflow: hidden;
   vertical-align: middle;
 }
 
 
-//
 // Tables
 //
 
 table {
-  border-collapse: collapse; // Prevent double borders
+  width: 100%;
+  margin-bottom: 24px;
+  background-color: transparent;
+  border-collapse: collapse;
+  vertical-align: middle;
+  background-color: #fff;
+}
+
+th {
+  padding: 15px;
+  text-align: inherit;
+  font-weight: 600;
+  letter-spacing: .08em;
+  text-transform: uppercase;
+  color: #95aac9;
+  vertical-align: bottom;
+  border-top: 1px solid #edf2f9;
+  border-bottom: 1px solid #edf2f9;
+  background-color: #f9fbfd;
+  font-size: 12px;
+}
+
+td {
+  padding: 15px;
+  vertical-align: top;
+  font-size: 15px;
+  border-bottom: 1px solid #edf2f9;
 }
 
 caption {
@@ -300,34 +251,18 @@ caption {
   caption-side: bottom;
 }
 
-th {
-  // Matches default `<td>` alignment by inheriting from the `<body>`, or the
-  // closest parent with a set `text-align`.
-  text-align: inherit;
-}
-
-
-//
 // Forms
 //
 
 label {
-  // Allow labels to use `margin` for spacing.
   display: inline-block;
   margin-bottom: 8px;
 }
 
-// Remove the default `border-radius` that macOS Chrome adds.
-//
-// Details at https://github.com/twbs/bootstrap/issues/24093
 button {
   border-radius: 0;
 }
 
-// Work around a Firefox/IE bug where the transparent `button` background
-// results in a loss of the default `button` focus styles.
-//
-// Credit: https://github.com/suitcss/base/
 button:focus {
   outline: 1px dotted;
   outline: 5px auto -webkit-focus-ring-color;
@@ -354,9 +289,6 @@ select {
   text-transform: none; // Remove the inheritance of text transform in Firefox
 }
 
-// 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
-//    controls in Android 4.
-// 2. Correct the inability to style clickable types in iOS and Safari.
 button,
 html [type="button"], // 1
 [type="reset"],
@@ -364,7 +296,6 @@ html [type="button"], // 1
   -webkit-appearance: button; // 2
 }
 
-// Remove inner border and padding from Firefox, but don't restore the outline like Normalize.
 button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
@@ -384,35 +315,21 @@ input[type="date"],
 input[type="time"],
 input[type="datetime-local"],
 input[type="month"] {
-  // Remove the default appearance of temporal inputs to avoid a Mobile Safari
-  // bug where setting a custom line-height prevents text from being vertically
-  // centered within the input.
-  // See https://bugs.webkit.org/show_bug.cgi?id=139848
-  // and https://github.com/twbs/bootstrap/issues/11266
   -webkit-appearance: listbox;
 }
 
 textarea {
-  overflow: auto; // Remove the default vertical scrollbar in IE.
-  // Textareas should really only resize vertically so they don't break their (horizontal) containers.
+  overflow: auto;
   resize: vertical;
 }
 
 fieldset {
-  // Browsers set a default `min-width: min-content;` on fieldsets,
-  // unlike e.g. `<div>`s, which have `min-width: 0;` by default.
-  // So we reset that to ensure fieldsets behave more like a standard block element.
-  // See https://github.com/twbs/bootstrap/issues/12359
-  // and https://html.spec.whatwg.org/multipage/#the-fieldset-and-legend-elements
   min-width: 0;
-  // Reset the default outline behavior of fieldsets so they don't affect page layout.
   padding: 0;
   margin: 0;
   border: 0;
 }
 
-// 1. Correct the text wrapping in Edge and IE.
-// 2. Correct the color inheritance from `fieldset` elements in IE.
 legend {
   display: block;
   width: 100%;
@@ -436,15 +353,10 @@ progress {
 }
 
 [type="search"] {
-  // This overrides the extra rounded corners on search inputs in iOS so that our
-  // `.form-control` class can properly style them. Note that this cannot simply
-  // be added to `.form-control` as it's not specific enough. For details, see
-  // https://github.com/twbs/bootstrap/issues/11586.
   outline-offset: -2px; // 2. Correct the outline style in Safari.
   -webkit-appearance: none;
 }
 
-//
 // Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
 //
 
