--- a/src/style/mixins/_forms.scss
+++ b/src/style/mixins/_forms.scss
@@ -42,7 +42,7 @@
     line-height: $line-height-base;
     color: color-yiq($color);
     background-color: rgba($color, $tooltip-opacity);
-    @include border-radius($tooltip-border-radius);
+    border-radius: $tooltip-border-radius;
   }
 
   .form-control,
