--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -347,7 +347,6 @@ $input-color:                       $gray-700 !default;
 $input-bg:                          $white !default;
 $input-disabled-bg:                 $gray-200 !default;
 
-$input-border-width:                $border-width !default;
 $input-border-color:                #d2ddec !default;
 $input-box-shadow:                  inset 0 1px 1px rgba($primary, .075) !default;
 $input-transition:                  border-color .15s ease-in-out, box-shadow .15s ease-in-out !default;
@@ -358,8 +357,14 @@ $input-border-radius-sm:            $border-radius-sm !default;
 
 $input-focus-bg:                    $input-bg !default;
 $input-focus-border-color:          $primary !default;
-$input-focus-color:                 lighten($component-active-bg, 25%) !default;
-$input-focus-width:                 2px !default;
-$input-focus-box-shadow:            0 0 0 $input-focus-width $input-focus-color !default;
+$input-focus-box-shadow:            0 0 0 2px lighten($component-active-bg, 25%) !default;
 
 $input-hover-border-color:          $input-focus-border-color !default;
+
+// Alert
+// 
+$alert-padding-y:                   12px !default;
+$alert-padding-x:                   20px !default;
+$alert-margin-bottom:               1rem !default;
+$alert-border-radius:               $border-radius !default;
+$alert-link-font-weight:            $font-weight-bold !default;
