--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -95,7 +95,6 @@ $yiq-text-light:            $white !default;
 $enable-caret:              true !default;
 $enable-rounded:            true !default;
 $enable-shadows:            true !default;
-$enable-gradients:          false !default;
 $enable-transitions:        true !default;
 $enable-hover-media-query:  false !default;
 $enable-grid-classes:       true !default;
@@ -274,7 +273,7 @@ $btn-border-width:            $border-width !default;
 
 $btn-font-weight:             $font-weight-normal !default;
 $btn-box-shadow:              inset 0 1px 0 rgba($white, .15), 0 1px 1px rgba($black, .075) !default;
-$btn-focus-width:             3px !default;
+$btn-focus-width:             2.5px !default;
 $btn-focus-box-shadow:        0 0 0 3px rgba($component-active-bg, .25) !default;
 $btn-disabled-opacity:        .65 !default;
 $btn-active-box-shadow:       inset 0 3px 5px rgba($black, .125) !default;
@@ -368,3 +367,6 @@ $alert-padding-x:                   20px !default;
 $alert-margin-bottom:               1rem !default;
 $alert-border-radius:               $border-radius !default;
 $alert-link-font-weight:            $font-weight-bold !default;
+$alert-bg-level:                    -10 !default;
+$alert-border-level:                -9 !default;
+$alert-color-level:                 6 !default;
