--- a/src/style/mixins/_alert.scss
+++ b/src/style/mixins/_alert.scss
@@ -1,13 +1,13 @@
 @mixin alert-variant($background, $border, $color) {
   color: $color;
-  @include gradient-bg($background);
+  background-color: $background;
   border-color: $border;
 
   hr {
     border-top-color: darken($border, 5%);
   }
 
-  .alert-link {
+  a {
     color: darken($color, 10%);
   }
 }
