--- a/src/style/mixins/_buttons.scss
+++ b/src/style/mixins/_buttons.scss
@@ -38,18 +38,13 @@
   .show > &.dropdown-toggle {
     color: color-yiq($active-background);
     background-color: $active-background;
-    @if $enable-gradients {
-      background-image: none; // Remove the gradient for the pressed/active state
-    }
+    // @if $enable-gradients {
+    //   background-image: none; // Remove the gradient for the pressed/active state
+    // }
     border-color: $active-border;
 
     &:focus {
-      // Avoid using mixin so we can pass custom focus shadow properly
-      @if $enable-shadows {
-        box-shadow: $btn-active-box-shadow, 0 0 0 $btn-focus-width rgba($border, .5);
-      } @else {
-        box-shadow: 0 0 0 $btn-focus-width rgba($border, .5);
-      }
+      box-shadow: 0 0 0 $btn-focus-width rgba($border, .5);
     }
   }
 }
@@ -85,12 +80,7 @@
     border-color: $active-border;
 
     &:focus {
-      // Avoid using mixin so we can pass custom focus shadow properly
-      @if $enable-shadows and $btn-active-box-shadow != none {
-        box-shadow: $btn-active-box-shadow, 0 0 0 $btn-focus-width rgba($color, .5);
-      } @else {
-        box-shadow: 0 0 0 $btn-focus-width rgba($color, .5);
-      }
+      box-shadow: 0 0 0 $btn-focus-width rgba($color, .5);
     }
   }
 }
